# ai

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_LOG.txt  LICENSE  LICENSING.md  MISSING_PIECES.md  NEXT_TASK.md  NOTICE  PLANS.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TODO.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_ok.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  cla.yml  codeql.yml  deploy-api.yml  deploy-vps.yml  e2e.yml  helm-chart.yml  release-python-sdk.yml  release-typescript-sdk.yml  release-vscode-extension.yml  release.yml
agency/: README.md
agency/delivery/: backend-engineer.yaml  data-engineer.yaml  frontend-engineer.yaml  infra-engineer.yaml  integration-engineer.yaml  ml-engineer.yaml  tech-lead.yaml
agency/development/: local-coder-iterative.yaml
agency/direction/: architect.yaml  local-pair.yaml  principal.yaml  product-strategist.yaml  program-manager.yaml
agency/dry-runs/: 2026-05-04-healthz-db.md  2026-05-05-healthz-db-live.md  2026-05-05-healthz-db-stub.md
agency/meta/: agent-smith.yaml  eval-runner.yaml  historian.yaml  hr.yaml
agency/support/: code-reviewer.yaml  designer.yaml  devrel.yaml  finance-ops.yaml  legal-compliance.yaml  local-fs-summarizer.yaml  local-reviewer.yaml  performance-engineer.yaml  qa-engineer.yaml  sre.yaml  (+3 more)
agents/: local-summarizer.yaml
docs/: data-retention.md  local-llm-testing.md  runbook.md  support-intake.md
scripts/: local-llm-demo.ts  seed-test-data.sh  vps-bootstrap.sh  vps-deploy-webhook.py  vps-deploy.sh  vps-emit-compose.sh
sdks/python/: .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  pyproject.toml
sdks/python/examples/: eval_runner.py  multi_model_compare.py  quickstart.py  webhook_handler.py
sdks/python/src/aldo_ai/: __init__.py  _transport.py  auth.py  cli.py  client.py  errors.py  types.py
sdks/python/src/aldo_ai/resources/: __init__.py  _base.py  agents.py  alerts.py  annotations.py  dashboards.py  datasets.py  eval.py  integrations.py  models.py  notifications.py  playground.py  runs.py  secrets.py  shares.py
sdks/python/tests/: conftest.py  test_agents.py  test_alerts.py  test_annotations_shares.py  test_async.py  test_auth.py  test_dashboards.py  test_datasets.py  test_eval.py  test_integrations.py  test_models.py  test_notifications.py  test_playground.py  test_runs.py  test_secrets.py
terraform/: README.md
(+1524 files in other folders)
