[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "aldo-ai"
version = "0.1.0"
description = "Official Python SDK for the ALDO AI platform — LLM-agnostic agent orchestration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "FSL-1.1-ALv2" }
license-files = ["LICENSE"]
authors = [{ name = "ALDO TECH LABS" }]
keywords = ["aldo", "ai", "agents", "llm", "evaluation", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.5",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/aldo-tech-labs/aldo-ai"
Documentation = "https://github.com/aldo-tech-labs/aldo-ai/tree/main/sdks/python"
Issues = "https://github.com/aldo-tech-labs/aldo-ai/issues"

[project.scripts]
aldo-py = "aldo_ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aldo_ai"]

[tool.hatch.build.targets.sdist]
include = [
  "src/aldo_ai",
  "README.md",
  "PUBLISHING.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
# UP006/UP007/UP037 conflict with mypy when method names shadow built-in types
# (e.g. resources defining `def list(...)` while still using `list[X]` /
# `List[X]` in type annotations on the same class). Keep the future-import
# style and explicit `List[]` where mypy demands it.
ignore = ["E501", "UP006", "UP007", "UP035", "UP037"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806"]
